<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_task_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/gl_add_task_hor20p5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_add_task_start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/add_task_title"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_hor20p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_ver5p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_ver95p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_ver90p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_ver10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/tv_add_task_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_light_italic"
        android:text="@string/add_task_name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver5p"
        app:layout_constraintTop_toTopOf="@+id/gl_add_task_hor10p" />

    <EditText
        android:id="@+id/et_add_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/lighter_gray"
        android:ems="10"
        android:fontFamily="@font/raleway_semibold"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_task_ver90p"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver10p"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_task_label_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_hor10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_task_hor90p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_add_task_label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_light_italic"
        android:text="@string/add_task_type"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver5p"
        app:layout_constraintTop_toBottomOf="@+id/et_add_task_name" />

    <TextView
        android:id="@+id/tv_add_task_label_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_light_italic"
        android:text="@string/add_task_date_due"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver5p"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></TextView>

    <EditText
        android:id="@+id/et_add_task_due_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_task_ver90p"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver10p"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_task_label_due_date" />

    <TextView
        android:id="@+id/tv_add_task_label_due_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_light_italic"
        android:text="@string/add_task_time_due"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver5p"
        app:layout_constraintTop_toBottomOf="@+id/et_add_task_due_date" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:inputType="time"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_task_ver90p"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver10p"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_task_label_due_time" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_task_ver90p"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_add_task_ver10p"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_task_label_type">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="65dp"
            android:text="@string/task_category_chores"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="60dp"
            android:text="@string/task_category_health"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="60dp"
            android:text="@string/task_category_social"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button7" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="70dp"
            android:text="@string/task_category_hobby"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="70dp"
            android:text="@string/task_category_leisure"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="55dp"
            android:text="@string/task_category_work"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/button3" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="65dp"
            android:text="@string/task_category_school"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/lighter_gray"
            android:fontFamily="@font/raleway_bold"
            android:minWidth="60dp"
            android:text="@string/task_category_others"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>