<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_init_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/gl_init_hor40p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_init_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_forestpika" />

        <ImageView
            android:id="@+id/iv_init_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_xl" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_init_hor40p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40218878" />

    <TextView
        android:id="@+id/tv_init_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/init_welcometo_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_init_label" />

    <TextView
        android:id="@+id/tv_init_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_light_italic"
        android:text="tagline here, tagline tagline"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_init_welcome"
        app:layout_constraintTop_toBottomOf="@+id/div_init" />

    <TextView
        android:id="@+id/tv_init_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/vt323"
        android:text="@string/app_name"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="@+id/tv_init_welcome"
        app:layout_constraintTop_toBottomOf="@+id/cl_init_label" />

    <View
        android:id="@+id/div_init"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_init_title" />

    <Button
        android:id="@+id/btn_init_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/init_register_btn"
        android:textColor="@color/darkest_gray"
        app:backgroundTint="@color/pink_button"
        app:layout_constraintBottom_toTopOf="@+id/btn_init_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_init_tagline"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_init_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/init_login_btn"
        android:textColor="@color/darkest_gray"
        app:backgroundTint="@color/pink_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>